--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,70 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+
     <LinearLayout
-        android:orientation="vertical"
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
+        android:layout_height="?android:actionBarSize"
 
-        android:layout_height="?android:actionBarSize">
+        android:orientation="vertical">
+
         <RelativeLayout
             android:id="@+id/select_layout"
-           android:visibility="gone"
-            android:background="@color/colorAccent"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        <TextView
-            android:id="@+id/number"
-            android:padding="10dp"
-
-            android:layout_alignParentRight="true"
-            android:text="1"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:textColor="#fff"
-            android:layout_centerVertical="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="match_parent"
+            android:background="@color/colorAccent"
+            android:visibility="gone">
 
             <TextView
-                android:id="@+id/reset"
-                android:padding="10dp"
-
-
-                android:text="Reset"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:textColor="#fff"
-                android:layout_centerVertical="true"
+                android:id="@+id/number"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:padding="10dp"
+                android:text="1"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:textColor="#fff" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:visibility="gone"
+                    android:id="@+id/reset"
+                    android:layout_width="wrap_content"
+
+
+                    android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:text="Reset"
+
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                    android:textColor="#fff" />
+
+                <TextView
+                    android:id="@+id/delete_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawableLeft="@drawable/ic_delete_white_24dp"
+                    android:padding="10dp"
+                    android:text="Delete"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                    android:textColor="#fff" />
+            </LinearLayout>
+
         </RelativeLayout>
 
         <RelativeLayout
-            android:background="@color/colorPrimary"
             android:id="@+id/un_select_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <TextView
-                android:padding="10dp"
+            android:layout_height="match_parent"
+            android:background="@color/colorPrimary">
 
+            <TextView
+                android:layout_width="wrap_content"
+
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:padding="10dp"
                 android:text="Google Keep"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:textColor="#fff"
-                android:layout_centerVertical="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:textColor="#fff" />
         </RelativeLayout>
     </LinearLayout>
 
-<androidx.recyclerview.widget.RecyclerView
-    android:id="@+id/gridView"
-    android:padding="10dp"
-    android:layout_below="@+id/toolbar"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/gridView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/toolbar"
+
+        android:padding="10dp" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/addNotes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="20dp"
+        android:clickable="true"
+        android:src="@android:drawable/ic_menu_edit" />
 
 
 </RelativeLayout>
