--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity">
 
     <LinearLayout
@@ -16,7 +17,8 @@
             android:id="@+id/select_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/colorAccent"
+            android:background="@color/white"
+            android:elevation="16dp"
             android:visibility="gone">
 
             <TextView
@@ -29,7 +31,7 @@
                 android:padding="10dp"
                 android:text="1"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:textColor="#fff" />
+                android:textColor="#3F51B5" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -50,15 +52,26 @@
                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:textColor="#fff" />
 
+
+
                 <TextView
                     android:id="@+id/delete_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/ic_delete_white_24dp"
                     android:padding="10dp"
-                    android:text="Delete"
+
                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                    android:textColor="#fff" />
+                    android:textColor="#3F51B5" />
+                <TextView
+                    android:id="@+id/change_color_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawableLeft="@drawable/ic_color_lens_blue_24dp"
+                    android:padding="10dp"
+
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                    android:textColor="#3F51B5" />
             </LinearLayout>
 
         </RelativeLayout>
@@ -75,9 +88,10 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:padding="10dp"
-                android:text="Google Keep"
+                android:text="@string/app_name"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 android:textColor="#fff" />
+
         </RelativeLayout>
     </LinearLayout>
 
@@ -96,8 +110,10 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_margin="20dp"
+        app:backgroundTint="@color/white"
+        android:backgroundTint="@color/white"
         android:clickable="true"
-        android:src="@android:drawable/ic_menu_edit" />
+        android:src="@drawable/ic_create_blue_24dp" />
 
 
 </RelativeLayout>
