--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -70,7 +70,7 @@
             android:layout_height="0dp"
             android:layout_marginTop="12dp"
             android:scaleType="centerCrop"
-            android:visibility="gone"
+            android:visibility="visible"
             android:src="@drawable/download"
             app:layout_constraintDimensionRatio="H,16:9"
             app:layout_constraintTop_toBottomOf="@+id/avatar_image"
