--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">@color/md_yellow_700</color>
+    <color name="colorPrimaryDark">@color/md_yellow_900</color>
     <color name="colorAccent">#D81B60</color>
     <color name="white">#fff</color>
+    <color name="transparent">#00000000</color>
 </resources>
